# timvt

./: .bumpversion.cfg  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGES.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yml  ci.yml  deploy_mkdocs.yml
.github/workflows/data/: urls_crs84.txt  urls_epsg4326.txt  urls_mercator.txt
Dockerfiles/app/: Dockerfile  wait-and-start.sh
Dockerfiles/db/: Dockerfile
api/timvt/db/: index.html
api/timvt/dependencies/: index.html
api/timvt/factory/: index.html
api/timvt/layer/: index.html
api/timvt/models/OGC/: index.html
api/timvt/models/mapbox/: index.html
api/timvt/resources/enums/: index.html
api/timvt/settings/: index.html
contributing/: index.html
data/: create_sentinel_and_landsat_grid.md
data/functions/: hexagon.sql  landsat_poly_centroid.sql  squares.sql
demo/: README.md  countries.sql  country.geojson  index.html
demo/leaflet/: index_3035.html  index_3413.html  index_4326.html
demo/leaflet/src/: proj4leaflet.js
demo/mapbox/: index.html
dockerfiles/: Dockerfile  Dockerfile.db
docs/: function_layers.md  mkdocs.yml
docs/src/: function_layers.md
docs/src/api/timvt/: db.md  dependencies.md  factory.md  layer.md  settings.md
docs/src/api/timvt/models/: OGC.md  mapbox.md
docs/src/api/timvt/resources/: enums.md
function_layers/: index.html
release-notes/: index.html
search/: search_index.json
tests/: benchmarks.py  conftest.py  test_main.py
tests/fixtures/: squares.sql
tests/routes/: __init__.py  test_demo.py  test_metadata.py  test_tiles.py  test_tms.py
timvt/: __init__.py  app.py  db.py  dbmodel.py  dependencies.py  errors.py  events.py  factory.py  functions.py  layer.py  main.py  middleware.py  settings.py  utils.py  version.py
timvt/api/: __init__.py  deps.py
timvt/api/api_v1/: api.py  utils.py
timvt/core/: config.py
timvt/custom/: __init__.py  tms.py
timvt/db/: __init__.py  catalog.py  events.py  functions.py  session.py  tiles.py
timvt/endpoints/: __init__.py  demo.py  factory.py  health.py  index.py  tiles.py  tms.py
timvt/models/: OGC.py  __init__.py  mapbox.py  metadata.py
timvt/resources/: __init__.py  enums.py  responses.py
timvt/ressources/: __init__.py  common.py  enums.py  responses.py
timvt/sql/: squares.sql
timvt/templates/: __init__.py  demo.html  factory.py  index.html  viewer.html
timvt/utils/: __init__.py  catalog.py  dependencies.py  timings.py
