[project]
name = "timvt"
description = "A lightweight PostGIS based dynamic vector tile server."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
keywords = ["FastAPI", "MVT", "POSTGIS"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "asyncpg>=0.23.0",
    "buildpg>=0.3",
    "fastapi>=0.73",
    "jinja2>=2.11.2,<4.0.0",
    "morecantile>=3.1,<4.0",
    "starlette-cramjam>=0.3,<0.4",
    "importlib_resources>=1.1.0; python_version < '3.9'",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "requests",
    "psycopg2",
    "pytest-pgsql",
    "mapbox-vector-tile",
    "protobuf>=3.0,<4.0",
    "numpy",
]
dev = [
    "pre-commit",
]
server = [
    "uvicorn[standard]>=0.12.0,<0.16.0",
]
docs = [
    "nbconvert",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
    "pygments",
    "pdocs",
]

[project.urls]
Source = "https://github.com/developmentseed/timvt"
Documentation = "https://developmentseed.org/timvt/"

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "timvt"

[tool.flit.sdist]
exclude = [
    "tests/",
    "docs/",
    ".github/",
    "CHANGES.md",
    "CONTRIBUTING.md",
    "dockerfiles",
    "demo",
    ".env*",
    "data/",
    "docker-compose.yml",
]

[tool.isort]
profile = "black"
known_first_party = ["timvt"]
known_third_party = [
    "morecantile",
]
forced_separate = [
    "fastapi",
    "starlette",
]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = "True"

[tool.pydocstyle]
select = "D1"
match = "(?!test).*.py"
