[metadata]
version = attr: timvt.version.__version__

[bumpversion]
current_version = 0.0.1
commit = True
tag = True
tag_name = {new_version}
parse =
	(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize =
	{major}.{minor}.{patch}

[bumpversion:file:timvt/version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[isort]
profile = black
known_first_party = timvt
forced_separate = fastapi,starlette
known_third_party = morecantile
default_section = THIRDPARTY

[flake8]
ignore = E501,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 12
max-line-length = 90

[mypy]
no_strict_optional = true
ignore_missing_imports = True

[pydocstyle]
select = D1
match = (?!test).*\.py
